--- a/index.html
+++ b/index.html
@@ -125,14 +125,16 @@
 <input type="password" name="password" id="password" placeholder="Enter Your Password"><br><br>
 <label for="">Re Enter Password</label><br>
 <input type="password" name="password" id="password" placeholder="Enter Your Password"><br><br>
-<input type="radio" name="male" id="male"><span id="male">&nbsp; Male</span>&nbsp;&nbsp;
-<input type="radio" name="fmale" id="fmale"><span id="fmale">&nbsp; Female</span>&nbsp;&nbsp;
-<input type="radio" name="Others" id="Others"><span id="Others">&nbsp; Others</span>&nbsp;&nbsp;<br><br>
+<input type="radio" name="gender" id="male"><span id="male">&nbsp; Male</span>&nbsp;&nbsp;
+<input type="radio" name="gender" id="fmale"><span id="fmale">&nbsp; Female</span>&nbsp;&nbsp;
+<input type="radio" name="gender" id="Others"><span id="Others">&nbsp; Others</span>&nbsp;&nbsp;<br><br>
 <input type="submit" value="Submit" class=" btn btn-success">
 
 
     </form>
 </div>
+
+
 
 </body>
 </html>
